# Celltomata

./: .gitignore  Cargo.toml  README.md  package-lock.json  tsconfig.json
src/: board.rs  constants.rs  data.rs  main.rs  msg.rs  server.rs  utils.rs
ts_src/: app.ts  main.ts
ts_target/: app.js  app.js.map  main.js  main.js.map
website/: game.html  index.html
website/scripts/: canvas.js  scripts.js
website/styles/: styles.css
