[package]
name = "TileGame"
version = "0.1.0"
authors = ["Avarel <avarelpm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.8"
dashmap = "3.5.1"